fixed attack table roll template overlap glitch when timestamps are used

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -4134,10 +4134,11 @@ details[open].thac0-box {
 }
 
 .sheet-rolltemplate-attacks-table div {
+  border-top-color: transparent;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   box-shadow: 2px 4px 5px #000;
-  margin: -4.6em 0 -1.5em 0;
+  margin: -3.75em 0 -1.5em 0;
   padding-bottom: 0.25em;
 }
 
